--- a/templates/inc/navbar.html.twig
+++ b/templates/inc/navbar.html.twig
@@ -3,9 +3,9 @@
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
         <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.1.0/js/bootstrap.bundle.min.js"></script>
     </head>
-    <div class="container d-flex">
+    <div class="container">
         {% if app.user %}
-        <a href="{{ path('home') }}" class="navbar-brand mr-auto p-2">OUKHA-SHOP</a>
+        <a href="{{ path('home') }}" class="navbar-brand mr-auto p-2">LSI-COMMERCE</a>
         <button class="navbar-toggler" type="button" datatoggle="collapse" data-target="#mobile-nav">
             <span class="navbar-toggle-icon"></span>
         </button>
@@ -18,14 +18,14 @@
                     </a>
                 </li>
                 <li class="nav-item">
-                    <a href="{{ path('new_product') }}" class="nav-link">
-                        <i class="fas fa-plus-square"></i>
-                        Add New Product
+                    <a href="{{ path('app_category') }}" class="nav-link">
+                        <i class="fas fa-th-list"></i> All Categories
                     </a>
                 </li>
                 <li class="nav-item">
-                    <a href="{{ path('app_category') }}" class="nav-link">
-                        <i class="fas fa-th-list"></i> All Categories
+                    <a href="{{ path('new_product') }}" class="nav-link">
+                        <i class="fas fa-plus-square"></i>
+                        Add New Product
                     </a>
                 </li>
                 <li class="nav-item">
@@ -34,22 +34,18 @@
                         Add New Category
                     </a>
                 </li>
-                <li class="nav-item d-flex justify-content-end">
+          <!--      <li class="nav-item d-flex justify-content-end">
                     <a href="{{ path('home2') }}" class="nav-link" data-toggle="tooltip" title="Switch To Buyer"><i
                                 class="fas fa-exchange-alt"></i></a>
-                </li>
+                </li>-->
                 <li class="nav-item dropdown">
                     <a href="#" class="nav-link dropdown-toggle" id="user-dropdown" role="button" data-toggle="dropdown"
                        aria-haspopup="true" aria-expanded="false">
-                        <i class="fa fa-user"></i>
+                       <i class="bi bi-person-circle"></i>
                     </a>
                     <div class="dropdown-menu dropdown-menu-right" aria-labelledby="user-dropdown">
-
-                        <a class="dropdown-item btn-dark" href="{{ path('security.logout') }}">Logout</a>
-
-                        <a class="dropdown-item btn-dark" href="{{ path('user.edit', {'id': app.user.id}) }}">Edit
-                            Profil</a>
-
+                        <a class="dropdown-item btn-dark" href="{{ path('user.edit', {'id': app.user.id}) }}"><i class="bi bi-person-lines-fill" style="margin-right: 10px;"></i>Profile</a>
+                        <a class="dropdown-item btn-dark" href="{{ path('home2') }}"><i class="bi bi-box-arrow-left" style="margin-right: 10px;"></i>Logout</a>
                     </div>
                 </li>
 
