--- a/templates/inc/navbarb.html.twig
+++ b/templates/inc/navbarb.html.twig
@@ -1,58 +1,36 @@
 <nav class="navbar navbar-expand-sm navbar-dark bg-dark" style="box-shadow: 0px 2px 5px rgba(0,0,0,0.5)">
+
     <head>
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
         <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.1.0/js/bootstrap.bundle.min.js"></script>
+        <script>
+            function login() {
+                window.location.href = "{{ path('security.logout') }}";
+            }
+            function SignUP(){
+                window.location.href="{{ path('security.registration') }}";
+            }
+        </script>
     </head>
     <div class="container d-flex">
-        {% if app.user %}
-        <a href="{{ path('home2') }}" class="navbar-brand mr-auto p-2">OUKHA-SHOP</a>
+
+        <a href="{{ path('home2') }}" class="navbar-brand mr-auto p-2">LSI-COMMERCE</a>
         <button class="navbar-toggler" type="button" datatoggle="collapse" data-target="#mobile-nav">
             <span class="navbar-toggle-icon"></span>
         </button>
         <div class="collapse navbar-collapse d-flex justify-content-end" id="mobile-nav">
             <ul class="navbar-nav ml-auto">
                 <li class="nav-item">
-                    <a href="{{ path('app_purchase') }}" class="nav-link">
-                        <i class="fas fa-history"></i>
-                    </a>
-                </li>
-                <li class="nav-item">
                     <a href="{{ path('app_cart') }}" class="nav-link">
                         <i class="fas fa-shopping-cart"></i>
-                        <sup style="display: inline-block;
-    padding: 0.25em;
-    border-radius: 50%;
-    background-color: white;
-    color: black;
-    width: 15px;
-    height: 15px;
-    font-size: 0.8em;
-    line-height: 0.6;
-    vertical-align: middle;
-    margin-left: -0.5em;
-">{{ cart_count }}</sup>
+                        <sup style="display: inline-block; padding: 0.25em; border-radius: 50%; background-color: white; color: black; width: 15px; height: 15px; font-size: 0.8em; line-height: 0.6; vertical-align: middle; margin-left: -0.5em;">{{ cart_count }}</sup>
                     </a>
                 </li>
-                <li class="nav-item d-flex justify-content-end">
-                    <a href="{{ path('home') }}" class="nav-link" data-toggle="tooltip" title="Switch To Seller"><i
-                                class="fas fa-exchange-alt"></i></a>
-                </li>
-                <li class="nav-item dropdown">
-                    <a href="#" class="nav-link dropdown-toggle" id="user-dropdown" role="button" data-toggle="dropdown"
-                       aria-haspopup="true" aria-expanded="false">
-                        <i class="fa fa-user"></i>
-                    </a>
-                    <div class="dropdown-menu dropdown-menu-right" aria-labelledby="user-dropdown">
+                <div>
+                    <button type="button" class="btn btn-info" onclick="SignUP()">SignUP</button>
+                    <button type="button" class="btn btn-info" onclick="login()">LogIN</button>
+                </div>
 
-                        <a class="dropdown-item btn-dark" href="{{ path('security.logout') }}">Logout</a>
-
-                        <a class="dropdown-item btn-dark" href="{{ path('user.edit', {'id': app.user.id}) }}">Edit
-                            Profil</a>
-
-                    </div>
-                </li>
-
-                {% endif %}
             </ul>
         </div>
     </div>
