--- a/templates/inc/navbarb.html.twig
+++ b/templates/inc/navbarb.html.twig
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-sm navbar-dark bg-dark" style="box-shadow: 0px 2px 5px rgba(0,0,0,0.5)">
+<nav class="navbar navbar-expand-sm navbar-primary bg-info" style="box-shadow: 0px 2px 5px rgba(0,0,0,0.5)">
 
     <head>
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
@@ -14,12 +14,13 @@
     </head>
     <div class="container d-flex">
 
-        <a href="{{ path('home2') }}" class="navbar-brand mr-auto p-2">LSI-COMMERCE</a>
+        <a href="{{ path('app_productb') }}" class="navbar-brand mr-auto p-2">LSI-COMMERCE</a>
         <button class="navbar-toggler" type="button" datatoggle="collapse" data-target="#mobile-nav">
             <span class="navbar-toggle-icon"></span>
         </button>
         <div class="collapse navbar-collapse d-flex justify-content-end" id="mobile-nav">
             <ul class="navbar-nav ml-auto">
+                
                 <li class="nav-item">
                     <a href="{{ path('app_cart') }}" class="nav-link">
                         <i class="fas fa-shopping-cart"></i>
@@ -27,8 +28,8 @@
                     </a>
                 </li>
                 <div>
-                    <button type="button" class="btn btn-info" onclick="SignUP()">SignUP</button>
-                    <button type="button" class="btn btn-info" onclick="login()">LogIN</button>
+                    <button type="button" class="btn btn-primary" onclick="SignUP()">SignUP</button>
+                    <button type="button" class="btn btn-primary" onclick="login()">LogIN</button>
                 </div>
 
             </ul>
