--- a/templates/product/indexb.html.twig
+++ b/templates/product/indexb.html.twig
@@ -68,7 +68,7 @@
                         <a href="{{ path('detailsb', {id: product.product.id}) }}" class="card-link">
                             <div class="card shadow-sm">
                                 <div class="image">
-                                    <img src="{{ asset('/images/' ~ product.product.brochureFilename)}}" class="card-img-top" alt="Product Image">
+                                    <img src="{{ asset('/images/' ~ product.product.brochureFilename)}}" class="card-img-top" alt="Product Image" style="height: 320px;">
                                 </div>
                                 <div class="card-body">
                                     <h5 class="card-title">{{ product.product.name }}</h5>
