--- a/templates/product/detailsb.html.twig
+++ b/templates/product/detailsb.html.twig
@@ -36,7 +36,7 @@
               </div>
             </div>
             <div class="d-flex justify-content-between total font-weight-bold mt-4">
-              <span>Price</span><span>{{product.price}} Dhs</span>
+              <span>Price</span><span>{{product.price}} $</span>
             </div>
         </div>
     </div>
