--- a/templates/user/edit.html.twig
+++ b/templates/user/edit.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}OUKHA-SHOP Edition{% endblock %}
+{% block title %}LSI-COMMERCE{% endblock %}
 
 {% block body %}
 <a href="#" onclick="history.back();" class="btn">
@@ -56,59 +56,7 @@
   </div>
 </div>
 
-<div class="card" style="width: 80%; margin-left: 140px; margin-top: 50px; margin-bottom: 30px;">
-  <div class="card-header" style="background-color: #f8f9fa; font-weight: bold; text-align: center;">
-    <h2>Your products</h2>
-  </div>
-  <div class="card-body">
-    {% for message in app.flashes('edited') %}
-        <div class="alert alert-success col no-padding">
-            {{ message }}
-        </div>
-    {% endfor %}
-    {% for message in app.flashes('success') %}
-        <div class="alert alert-success">
-            {{ message }}
-        </div>
-    {% endfor %}
-    {% for message in app.flashes('danger') %}
-        <div class="alert alert-danger">
-            {{ message }}
-        </div>
-    {% endfor %}
 
-    {% if products %}
-        <table id="products" class="table table-striped">
-            <thead>
-            <tr>
-                <th>Name</th>
-                <th>Price</th>
-                <th>Picture</th> <!-- Nouvelle colonne pour l'image -->
-                <th>Actions</th>
-            </tr>
-            </thead>
-            <tbody>
-            {% for product in products %}
-                <tr>
-                    <td>{{ product.name }}</td>
-                    <td>{{ product.price }} Dhs</td>
-                    <td><img src="{{ asset('/images/' ~ product.brochureFilename) }}" width="50" height="50"></td> <!-- Affichage de l'image -->
-                    <!-- Affichage de l'image -->
-                    <td>
-                        <a href="/product/details/{{ product.id }}" class="btn btn-success">Details</a>
-                        <a href="/product/edit/{{ product.id }}" class="btn btn-dark">Edit</a>
-                        <a href="/product/delete/{{ product.id }}" class="btn btn-danger"
-                           onclick="return confirm('Do you want to delete {{ product.name }}?')">Delete</a>
 
-                    </td>
-                </tr>
-            {% endfor %}
-            </tbody>
-        </table>
-    {% else %}
-        <p>Aucun produit</p>
-    {% endif %}
-  </div>
-</div>
 
 {% endblock %}
